...

class AuthRepositoryImpl @Inject constructor(
    val userRef: CollectionReference
) : AuthRepository {

    override suspend fun signUp(
        name: String,
        username: String,
        email: String,
        password: String,
        rePassword: String,
        onSuccess: (Response) -> Unit,
        onError: (Response) -> Unit
    ) {
        try {
            when {
                name.isBlank() -> throw Exception("Please enter your name.")
                username.isBlank() -> throw Exception("Please enter your username.")
                email.isBlank() -> throw Exception("Please enter your email.")
                !email.matches(EMAIL_REGEX) -> throw Exception("Enter a valid email.")
                password.isBlank() -> throw Exception("Please enter your password.")
                rePassword.isBlank() -> throw Exception("Please re-enter your password.")
                password != rePassword -> throw Exception("Passwords do not match.")

                else -> {
                    val querySnap = userRef.get().await()
                    querySnap.forEach { docSnap ->
                        if (docSnap.data["username"] == username) throw Exception("Username already exists.")
                    }
...
                        }
                        .addOnFailureListener { error ->
                            if (error is FirebaseAuthException) {
                                when (error.errorCode) {
                                    "ERROR_INVALID_EMAIL" -> onError(Response(message = "Enter a valid email."))

                                    "ERROR_INVALID_CREDENTIAL" -> onError(Response(message = "Invalid credentials."))

                                    "ERROR_TOO_MANY_REQUESTS" -> onError(Response(message = "Too many attempts, try after some time."))

                                    "ERROR_NETWORK_REQUEST_FAILED" -> onError(Response(message = "Please check your network connection."))

                                    else -> onError(Response(message = "An unknown error has occurred!"))
...
